second commit with login functionality

--- a/client/public/table/table.html
+++ b/client/public/table/table.html
@@ -6,7 +6,7 @@
           <br/>
           <h2>Ordered By Trace ID</h2>
           <br/>
-          <div class="table-responsive" ng-controller="tableCtrl">
+          <div class="table-responsive">
             <table class="table table-invers bg-primary">
               <thead>
                 <tr>
