--- a/client/public/index.html
+++ b/client/public/index.html
@@ -111,6 +111,7 @@
    <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
    <script src="libs/angular-moment/angular-moment.js"></script>
    <script src="libs/angularUtils-pagination/dirPagination.js"></script>
+   <script src="libs/angu-fixed-header-table/angu-fixed-header-table.js"></script>
    <script src="app.js"></script>
    <script src="js/authService.js"></script>
    <script src="js/loginService.js"></script>
