--- a/client/public/table/table.html
+++ b/client/public/table/table.html
@@ -47,7 +47,7 @@
     <rd-widget>
         <rd-widget-body>
  <form ng-submit="getData(dateRange)" >
-     <div class="container-fluid col-md-6">
+     <div class="container-fluid col-lg-6">
      <div class="title" >Start Date</div>
         <p class="input-group">
           <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dateRange.startDate" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
@@ -64,7 +64,7 @@
           </div>
         </p>
         </div>
-        <div class="container-fluid col-md-6">
+        <div class="container-fluid col-lg-6">
         <div class="title">End Date</div>
         <p class="input-group">
           <input type="text"  class="form-control" uib-datepicker-popup="{{format}}" ng-model="dateRange.endDate" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
@@ -81,7 +81,7 @@
         </div>
         </p>
         </div>
-    <button type="submit" class="btn btn-primary ">Search</button>
+    <button type="submit" class="btn btn-primary">Search</button>
     <button type="button" ng-click="reset()" class="btn btn-default">Reset</button>
     </form>
         </rd-widget-body>
@@ -104,20 +104,20 @@
                     <table class="table table-bordered table-condensed">
                         <tbody>
                             <tr>
-                                <th class="col-lg-1 col-md-1 col-sm-1" >Conversation ID</th>
-                                <th class="col-lg-1 col-md-1 col-sm-1 form-group">IntegrationName<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat="table in tables| unique: 'integrationName'| uppercase" ng-value="integrationName">{{table.integrationName}}</option></select></th>
-                                <th class="col-lg-1 col-md-1 col-sm-1 form-group">Sender<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat='table in tables| unique: "sender"' ng-value="sender">{{table.sender}}</option></select></th>
-                                <th class="col-lg-1 col-md-1 col-sm-1 form-group">Target<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat='table in tables| unique: "target"' ng-value="target">{{table.target}}</option></select></th>
-                                <th class="col-lg-1 col-md-1 col-sm-1">Date</th>
-                                <th class="col-lg-1 col-md-1 col-sm-1">Status</th>
+                                <th class="col-xs-1" >Conversation ID</th>
+                                <th class="col-xs-1 form-group">IntegrationName<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat="table in tables| unique: 'integrationName'| uppercase" ng-value="integrationName">{{table.integrationName}}</option></select></th>
+                                <th class="col-xs-1  form-group">Sender<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat='table in tables| unique: "sender"' ng-value="sender">{{table.sender}}</option></select></th>
+                                <th class="col-xs-1 form-group">Target<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat='table in tables| unique: "target"' ng-value="target">{{table.target}}</option></select></th>
+                                <th ng-click="orderByMe('messageDate')">Date &nbsp;<i ng-class="{'fa fa-chevron-circle-up': md===false, 'fa fa-chevron-down': md=== true }"></i></th>
+                                <th class="col-xs-1">Status<select class="form-control pull-right col-lg-1 col-md-1 col-sm-1" ng-model="selected" ng-change="theValue(selected)"><option ng-repeat='table in tables| unique: "messageState"' ng-value="messageState">{{table.messageState}}</option></select></th>
                             </tr>
-                            <tr dir-paginate="(key, val) in tables| filter: filterThis | filter:errorButton | filter: byDelivered | filter: hospital | filter:search|itemsPerPage: 50">
-                                <td>{{val.conversationID}}</td>
-                                <td>{{val.integrationName}}</td>
-                                <td>{{val.sender}}</td>
-                                <td>{{val.target}}</td>
-                                <td>{{val.messageDate}}</td>
-                                <td ng-class="{ 'text-primary': val.messageState === 'ERROR'}" ng-click="getValue(val.conversationID, val.errorInfo.errorReason, val.errorInfo.errorDetail, val.errorInfo.retryStatus)" >{{val.messageState}}</td>  
+                            <tr dir-paginate="(key, val) in tables| orderBy:myOrderBy: reverse | filter: filterThis | filter:errorButton | filter: byDelivered | filter: hospital | filter:search|itemsPerPage: 50">
+                                <td class="col-xs-2">{{val.conversationID}}</td>
+                                <td class="col-xs-2">{{val.integrationName}}</td>
+                                <td class="col-xs-2">{{val.sender}}</td>
+                                <td class="col-xs-2">{{val.target}}</td>
+                                <td class="col-xs-2">{{val.messageDate}}</td>
+                                <td class="col-xs-2" ng-class="{ 'text-primary': val.messageState === 'ERROR'}" ng-click="getValue(val.conversationID, val.errorInfo.errorReason, val.errorInfo.errorDetail, val.errorInfo.retryStatus)" >{{val.messageState}}</td>  
                                                      
                           </tr>
                         </tbody>
