--- a/client/public/index.html
+++ b/client/public/index.html
@@ -96,39 +96,12 @@
         <!-- End Header Bar -->
 
         <!-- Main Content -->
-        <div class="row">
-            <div class="col-lg-12">
-              <div ui-view="header"></div>
-            </div>
+        <div class="container-fluid">
+        <div ui-view></div>
+         <div ui-view="header"></div>
+         <div ui-view="datePicker"></div>
+
         </div>
-         <!-- <div ng-app="soaApp" ng-controller="TabCtrl"> -->
-        <div class="row">
-            <div class="col-lg-12">
-              <div ui-view="datePicker"></div>
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <!-- <rd-widget>
-              <rd-widget-body classes="graphsize"> -->
-            <uib-tabset>
-              <uib-tab ng-repeat="tab in tabsPie" heading="{{tab.title}}" active="tab.active" select="onTabSelected(tab.slug)">
-                <div ui-view="{{ tab.content }}"></div>
-              </uib-tab>
-            </uib-tabset>
-              <!-- </rd-widget-body>
-            </rd-widget> -->
-          </div>
-          <div class="col-lg-6">
-            <!-- <rd-widget>
-              <rd-widget-body classes="graphsize"> -->
-            <uib-tabset>
-              <uib-tab ng-repeat="tab in tabsBar" heading="{{tab.title}}" active="tab.active" select="onTabSelected(tab.slug)">
-                <div ui-view="{{ tab.content }}"></div>
-              </uib-tab>
-            </uib-tabset>
-              <!-- </rd-widget-body>
-            </rd-widget> -->
           </div>
         </div>
         <!-- </div>  -->
